--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "picsviewx",
   "version": "1.0.0",
-  "description": "Picture  gallery app  in Electron",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "electron index.js",
+    "dev": "electron src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AlevanteM",
