--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "electron src/index.js",
+    "dev": "cross-env NODE_ENV=development electron src/index.js",
+    "lint": "standard",
+    "lint-fix": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AlevanteM",
   "license": "MIT",
   "dependencies": {
-    "electron": "^2.0.1"
+    "cross-env": "^5.1.5",
+    "electron-compile": "^6.4.2",
+    "electron-debug": "^1.5.0"
+  },
+  "devDependencies": {
+    "devtron": "^1.4.0",
+    "electron-prebuilt-compile": "^2.0.0",
+    "standard": "^11.0.1"
   }
 }
